# email_newsletter

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240916203552_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_checker.rs  mod.rs  subscriptions.rs
tests/: health_checker.rs
